@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added OnBeforeUserActivate, OnUserActivate events
 - Added 'active' boolean field to modUser. Defaults to 1.
 - Added OnCreateUser, OnDeleteUser, OnUpdateUser events
 - [#MODX-1170] Fixed issues with Export Topic
